[package]
name = "ntt-transceiver"
version = "3.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ntt_transceiver"

[features]
no-entrypoint = []
no-idl = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build",
  "example-native-token-transfers/idl-build",
  "wormhole-anchor-sdk/mainnet" # TODO: is this kosher? builds idl without passing on our feature flags
]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = [ "wormhole-transceiver" ]
wormhole-transceiver = []
transceiver-type-from-env = []

bridge-address-from-env = [ "wormhole-anchor-sdk/bridge-address-from-env", "wormhole-svm-definitions/from-env" ]
mainnet = [ "wormhole-anchor-sdk/mainnet" ]
solana-devnet = [ "wormhole-anchor-sdk/solana-devnet", "wormhole-svm-definitions/testnet" ]
tilt-devnet = [ "wormhole-anchor-sdk/tilt-devnet", "wormhole-svm-definitions/localnet" ]
tilt-devnet2 = [ "tilt-devnet", "wormhole-svm-definitions/localnet" ]

[lints]
workspace = true

[dependencies]
ntt-messages = { path = "../../modules/ntt-messages", features = ["anchor", "hash"] }
anchor-lang.workspace = true
anchor-spl.workspace = true
solana-program.workspace = true
wormhole-post-message-shim-interface = { git = "https://github.com/wormholelabs-xyz/wormhole", branch = "svm-shims-fr-env-addr", features = ["no-entrypoint", "cpi"] }
wormhole-svm-definitions = { git = "https://github.com/wormholelabs-xyz/wormhole", branch = "svm-shims-fr-env-addr"}
cfg-if = "1.0.0"

wormhole-anchor-sdk.workspace = true
wormhole-io.workspace = true
wormhole-sdk.workspace = true

example-native-token-transfers = { path = "../example-native-token-transfers", features = ["no-entrypoint", "cpi"] }

[dev-dependencies]
hex.workspace = true
